--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/hostelDB
-JWT_SECRET=super_secret_key_asad
+MONGO_URI=mongodb://localhost:27017/hostelDB
